--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ Pygments==2.19.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
-pywin32==311
+pywin32
 pyzmq==27.0.1
 requests==2.32.4
 scikit-learn==1.7.1
